unpackaged/main/default/objects/API_Log__c/API_Log__c.object-meta.xml
<CustomObject>
    <description>This is a custom Clutch object used for logging external api interactions</description>
    <label>API Log</label>
    <nameField>
        <displayFormat>AL-{00000000}</displayFormat>
        <label>API Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>