unpackaged/main/default/objects/API_Log__c/fields/Accounts_Payable_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Payable_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accounts Payable Invoice</label>
    <referenceTo>varcpq__Accounts_Payable_Invoice__c</referenceTo>
    <relationshipLabel>API Logs</relationshipLabel>
    <relationshipName>API_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>