unpackaged/main/default/objects/API_Log__c/fields/API_Response__c.field-meta.xml
<CustomField>
    <fullName>API_Response__c</fullName>
    <inlineHelpText>This is the response returned from the API Call</inlineHelpText>
    <label>API Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>