unpackaged/main/default/objects/API_Log__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <label>ExternalId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>