unpackaged/main/default/objects/API_Log__c/fields/Processing_Result__c.field-meta.xml
<CustomField>
    <fullName>Processing_Result__c</fullName>
    <inlineHelpText>This stores the final response returned back from the API result</inlineHelpText>
    <label>Processing Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>