unpackaged/main/default/objects/API_Log__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Purchase Order Lookup</inlineHelpText>
    <label>Purchase Order</label>
    <referenceTo>varcpq__Purchase_Order__c</referenceTo>
    <relationshipLabel>API Logs</relationshipLabel>
    <relationshipName>API_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>