unpackaged/main/default/objects/API_Log__c/fields/Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Response_Date__c</fullName>
    <inlineHelpText>DateTime of Response</inlineHelpText>
    <label>Response Date</label>
    <type>DateTime</type>
</CustomField>