unpackaged/main/default/objects/API_Log__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Sales Order Lookup</inlineHelpText>
    <label>Sales Order</label>
    <referenceTo>varcpq__Sales_Order__c</referenceTo>
    <relationshipLabel>API Logs</relationshipLabel>
    <relationshipName>API_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>