unpackaged/main/default/objects/API_Log__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <inlineHelpText>This is the Source of the Log</inlineHelpText>
    <label>Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>