unpackaged/main/default/objects/API_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Status of the HTTP Response</inlineHelpText>
    <label>Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>