unpackaged/main/default/objects/API_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Source__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Purchase_Order__c</columns>
    <columns>Sales_Order__c</columns>
    <columns>Status__c</columns>
    <columns>Response_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>